Use ScopeLocal instead of ThreadLocal if they're available
Scope locals should be functionally equivalent to thread locals, but if
virtual threads are used, and setting thread locals are disabled on
them, then thread locals don't work properly, and scope locals solve
this.
CallDispatchTest ensures that back dispatching remote calls works as
expected.